cmake_minimum_required(VERSION 3.10)
project(cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp main.cpp exAns/ch2.cpp exAns/ch2.h exAns/ch3.cpp exAns/ch3.cxx exAns/ch4.cpp exAns/ch4.hxx exAns/ch5.cpp exAns/ch5.hxx exAns/ch6.cpp exAns/ch6.hxx exAns/ch7.cpp exAns/ch7.hxx exAns/ch8.cpp exAns/ch8.hxx)